--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">LearningAspects</string>
     <string name="title_practice">Practice</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_favorite">Favorite</string>
     <string name="title_activity_main_2">MainActivity_2</string>
     <string name="button_activity_main_1">Let\'s Practice</string>
     <string name="image_description_activity_main">chmurka z napisem cześć</string>
