Wyczyszczone przyciski tymczasowe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="title_activity_main_2">MainActivity_2</string>
     <string name="button_activity_main_1">Let\'s Practice</string>
     <string name="image_description_activity_main">chmurka z napisem cześć</string>
-    <string name="temp_logo_ecs">LOGO ECS</string>
+    <string name="temp_logo_ecs">LOGO</string>
 </resources>
